@@ -22,13 +22,15 @@ jobs:
 
     # See https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
     strategy:
+      # Run to completion even if one redis version has failures
+      fail-fast: false
       matrix:
        include:
          - REDIS_VER: 3.0.7
          - REDIS_VER: 3.2.13
          - REDIS_VER: 4.0.14
          - REDIS_VER: 5.0.12
-         - REDIS_VER: 6.2.1
+         - REDIS_VER: 6.2.4
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
