@@ -109,9 +109,9 @@
   EPOLLET       = (1 << 31)
 
   /* opcodes */
-  EPOLL_CTL_ADD = 1 /* add a file decriptor to the interface */
-  EPOLL_CTL_DEL = 2 /* remove a file decriptor from the interface */
-  EPOLL_CTL_MOD = 3 /* change file decriptor epoll_event structure */
+  EPOLL_CTL_ADD = 1 /* add a file descriptor to the interface */
+  EPOLL_CTL_DEL = 2 /* remove a file descriptor from the interface */
+  EPOLL_CTL_MOD = 3 /* change file descriptor epoll_event structure */
 
 - kqueue (bsd)
 
